Add support for local configuration